<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.NewItem"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_to_be_done"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:id="@+id/tvNewTask"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/etNewTask"
            android:layout_below="@+id/tvNewTask"
            android:layout_alignParentStart="true"
            android:textColorHint="#B8BFC2"
            android:hint="@string/enter_task_here" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task Description"
            android:textColor="@android:color/holo_green_dark"
            android:layout_below="@+id/etNewTask"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:id="@+id/tvDescription"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/etDisplayDescription"
            android:layout_below="@+id/tvDescription"
            android:layout_alignParentStart="true"
            android:textColorHint="#B8BFC2"
            android:hint="Enter Task Description Here.." />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_dark"
            android:text="@string/enter_priority"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:id="@+id/tvPriority"
            android:layout_below="@+id/etDisplayDescription"
            android:layout_alignParentStart="true" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPriority"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="High" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Low" />
        </RadioGroup>
        <Button
            android:id="@+id/addBtn"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@+id/radioGroup1"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:layout_marginStart="48dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/click_to_add"
            android:elevation="15dp"
            android:text="@string/add_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationZ="15dp" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_below="@+id/radioGroup1"
            android:layout_marginHorizontal="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/addBtn"
            android:backgroundTint="@android:color/holo_red_dark"
            android:contentDescription="@string/click_to_cancel"
            android:elevation="15dp"
            android:text="@string/cancel_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationZ="15dp" />


    </RelativeLayout>
</ScrollView>